# HW13-Web_Django

./: README.md  pyproject.toml
hw_quotes/: manage.py
hw_quotes/hw_quotes/: settings.py
hw_quotes/users/: urls.py  views.py
hw_quotes/users/templates/users/: signin.html
